<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/app_theme">

    <ImageView
        android:id="@+id/image_view_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mathon_go_icon" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7.5dp"
        android:text="@string/marks"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textFontWeight="700"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_icon"
        app:layout_constraintStart_toEndOf="@+id/image_view_icon"
        app:layout_constraintTop_toTopOf="@+id/image_view_icon" />

    <TextView
        android:id="@+id/text_view_unit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/gravitation"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:textFontWeight="700"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_icon" />

    <ImageView
        android:id="@+id/image_view_unit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_unit_name"
        app:layout_constraintStart_toEndOf="@+id/text_view_unit_name"
        app:layout_constraintTop_toTopOf="@+id/text_view_unit_name"
        app:srcCompat="@drawable/ic_gravitation" />

    <TextView
        android:id="@+id/text_view_no_of_ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:text="@string/no_of_ques"
        android:textColor="@color/text_light_color"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_unit_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/low_input_high_output_chapter"
        android:textColor="@color/text_light_color"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_no_of_ques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_no_of_ques"
        app:layout_constraintTop_toTopOf="@+id/text_view_no_of_ques" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/showing"
        android:textSize="14sp"
        android:textColor="@color/text_light_color"
        android:fontFamily="@font/sf_pro_display_regular"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/dashed_image"
        android:layout_width="0dp"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:src="@drawable/dotted" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_questions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/app_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>